--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -25,7 +25,7 @@
 
 <br>
 
-<button class="btn btn-primary" ng-click='incrementa()'>Novo</button>
+<a ng-href='#/contato' class='btn btn-primary'>Novo Contato</a>
 <p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
 <p class="text-info" ng-hide="contatos.length">Não há contatos cadastrados</p>
 <div class="table-responsive">
