--- a/public/partials/curso.html
+++ b/public/partials/curso.html
@@ -3,22 +3,21 @@
     {{mensagem.texto}}
 </p>
 <form ng-submit="salva()" <div class="form-group">
-    <label for="nome">Nome curso</label>
-    <input type="text" class="form-control" id="nome" name="nome" required ng-model="curso.nome">
+    <label for="nome">Curso</label>
+    <input type="text" class="form-control" id="curso" name="curso" required ng-model="curso.curso">
     </div>
 
     <div class="form-group">
         <label for="coordenador">Coordenador</label>
         <div class="input-group">
             <span class="input-group-addon">@</span>
-            <input type="email" class="form-control" id="coordenador" placeholder="email@exemplo.com" name="coordenador"
-            ng-model="curso.coordenador" required>
+            <input type="coordenador" class="form-control" id="coordenador" placeholder="email@exemplo.com" name="coordenador" ng-model="curso.coordenador" required>
         </div>
     </div>
     <div>
         <button type="submit" class="btn btn-primary">
-            Salvar
-        </button>
-        <a href="#/" class="btn btn-default">Voltar</a>
+			Salvar
+		</button>
+        <a href="#/cursos" class="btn btn-default">Voltar</a>
     </div>
 </form>
