--- a/public/partials/cursos.html
+++ b/public/partials/cursos.html
@@ -6,6 +6,7 @@
 
 <p ng-show="mensagem.texto">{{mensagem.texto}}</p>
 
+
 <nav class="navbar navbar-expand navbar-dark bg-dark">
 
     <div class="collapse navbar-collapse" id="navbarsExample02">
@@ -25,18 +26,23 @@
 
 <br>
 
+<!--a ng-href='#/curso' class='btn btn-primary'>Novo Curso</a-->
 <button class="btn btn-primary" ng-click='incrementa()'>Novo</button>
 
 <p ng-show="cursos.length">Cursos cadastrados: {{cursos.length}}</p>
 <p class="text-info" ng-hide="cursos.length">Não há cursos cadastrados</p>
+
 <div class="table-responsive">
-<table class="table table-hover">
-<tr><th>NOME</th><th>COORDENADOR</th><th class="text-center">Ação</th></tr>
-<tr ng-repeat="curso in cursos | filter: filtro">
-	<td><a ng-href='#/curso/{{curso._id}}'>{{curso.nome}}</a></td>
- <td>{{curso.coordenador}}</td>
-	<td class="text-center"><button ng-click='remove(curso)' class="btn btn-warning">Remover</button>
-  </td>
-</tr>
-</table>
+    <table class="table table-hover">
+        <tr>
+            <th>CURSO</th>
+            <th>COORDENADOR</th>
+            <th class="text-center">Ação</th>
+        </tr>
+        <tr ng-repeat="curso in cursos | filter: filtro">
+            <td><a ng-href='#/curso/{{curso._id}}'>{{curso.curso}}</a></td>
+            <td>{{curso.coordenador}}</td>
+            <td class="text-center"><button ng-click='remove(curso)' class="btn btn-warning">Remover</button></td>
+        </tr>
+    </table>
 </div>
